# project-ideation-tool

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: keepalive.yml
eval/: judge.py  manual-scorecard.md  results.json  results.md  sessions.csv
src/: agent.py  app.py  config.py  database.py  tavily_research.py
supabase/: schema.sql
